--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,22 +58,28 @@ Repository = "https://github.com/datakatalyst/aiosimon-io"
 Issues = "https://github.com/datakatalyst/aiosimon-io/issues"
 
 [project.optional-dependencies]
-dev = [
-    "aioresponses >= 0.7, < 1.0",
-    "black >= 24.8, < 25.0",
+build = [
     "build >= 1.2, < 2.0",
+    "twine >= 6.1, < 7.0",
+]
+dev = [
+    "black >= 24.8, < 25.0",
     "flake8 >= 7.1, < 8.0",
     "isort >= 5.13, < 6.0",
     "mypy >= 1.14, < 2.0",
+    "validate-pyproject >= 0.24, < 1.0",
+]
+docs = [
+    "sphinx >= 7.1, < 8.0",
+    "sphinx-autodoc-typehints >= 2.0, < 3.0",
+    "sphinx-rtd-theme >= 3.0, < 4.0",
+]
+test = [
+    "aioresponses >= 0.7, < 1.0",
     "pytest >= 8.3, < 9.0",
     "pytest-asyncio >= 0.24, < 1.0",
     "pytest-cov >= 5.0, < 6.0",
     "pytest-mock >= 3.14, < 4.0",
-    "sphinx >= 7.1, < 8.0",
-    "sphinx-autodoc-typehints >= 2.0, < 3.0",
-    "sphinx-rtd-theme >= 3.0, < 4.0",
-    "twine >= 6.1, < 7.0",
-    "validate-pyproject >= 0.24, < 1.0",
 ]
 
 [tool]
