--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,15 +27,29 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+        python -m pip install -e .[dev,test]
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Lint with black
+      run: |
+        # stop the build if there are Python syntax errors or undefined names
+        black --check .
+    - name: Lint with isort
+      run: |
+        # stop the build if there are Python syntax errors or undefined names
+        isort --check-only .
+    - name: Lint with mypy
+      run: |
+        # stop the build if there are Python syntax errors or undefined names
+        mypy --strict .
+    - name: Check pyproject.toml
+      run: |
+        # stop the build if there are Python syntax errors or undefined names
+        validate-pyproject pyproject.toml
     - name: Test with pytest
       run: |
         pytest
