--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -31,21 +31,21 @@ jobs:
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 aiosimon_io/ --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        flake8 aiosimon_io/ --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Lint with black
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        black --check .
+        black --check aiosimon_io/
     - name: Lint with isort
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        isort --check-only .
+        isort --check-only aiosimon_io/
     - name: Lint with mypy
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        mypy .
+        mypy aiosimon_io/
     - name: Check pyproject.toml
       run: |
         # stop the build if there are Python syntax errors or undefined names
